Galactic Round Update

--- a/Galactic/round.css
+++ b/Galactic/round.css
@@ -215,6 +215,14 @@ div.basiccontextmenu_contextMenuContents_TBSbv {
 .appdetailsgameinfopanel_DeckVerifiedInfo_IIJei {
   border-radius: 20px;
 }
+.basicappdetailssectionstyler_AppActionButton_QsZdW.appactionbutton_PlayButtonContainer_1FnJ6 {
+  border-radius: 20px;
+  overflow: hidden;
+}
+.basicappdetailssectionstyler_AppButtons_1thLD /* This makes the button a circle */
+  .appdetailsplaysection_MenuButton_3qDWQ {
+  border-radius: 50%; 
+}
 
 /* Media */
 .mediapage_ImageContainer_120HU {
@@ -225,7 +233,9 @@ div.basiccontextmenu_contextMenuContents_TBSbv {
 }
 
 /* Downloads */
-.downloads_SectionItem_1VNuY {
+.downloads_Button_3oavR.gamepaddialog_Button_1kn70.DialogButton[type="button"], /* This makes the button a circle */
+.downloads_SectionItem_1VNuY,
+.downloads_RemoveAllButton_1GdR5  {
   border-radius: 20px;
 }
 
@@ -276,46 +286,43 @@ div.basiccontextmenu_contextMenuContents_TBSbv {
   margin-top: 0px !important;
 }
 
-/* Options Container */
-.basiccontextmenu_contextMenuContents_TBSbv
-  .Play.basiccontextmenu_contextMenuItem_3PqLg:nth-child(1),
-.basiccontextmenu_contextMenuContents_TBSbv
-  .Install.basiccontextmenu_contextMenuItem_3PqLg:nth-child(1),
-.basiccontextmenu_contextMenuContents_TBSbv
-  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5):nth-child(5)[tone="destructive"] {
-  border-radius: 20px 20px 0px 0px;
+/* Options Container  */
+/* 
+  The majority of styles in this section were removed due to each container 
+  lacking the specificity needed to properly style them
+*/
+.basiccontextmenu_contextMenuContents_TBSbv:first-child
+  .basiccontextmenu_ContextMenuSeparator_zVMb1 {
+  /* 
+    This is here as sometimes the menu separators get stuck at 0px height and you can't change it with css
+    so instead of relying on the height property, we use padding. 
+  */
+  height: 0px;
+  padding-top: 2px;
 }
 
-.basiccontextmenu_contextMenuContents_TBSbv
-  .Play
-  ~ .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5),
-.basiccontextmenu_contextMenuContents_TBSbv
-  .Install
-  ~ .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5),
-.basiccontextmenu_contextMenuContents_TBSbv
-  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5):nth-child(5):not([tone="destructive"]),
-.basiccontextmenu_contextMenuContents_TBSbv
-  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5):nth-child(4),
-.basiccontextmenu_contextMenuContents_TBSbv
-  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(7):nth-child(3)[tone="destructive"],
-.basiccontextmenu_contextMenuContents_TBSbv
-  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(3):nth-child(7)[tone="destructive"] {
+.basiccontextmenu_contextMenuContents_TBSbv:first-child:not(.basiccontextmenu_hasSubMenu_1Mql2)
+  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(1),
+.basiccontextmenu_contextMenuContents_TBSbv:first-child.basiccontextmenu_hasSubMenu_1Mql2
+  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(2) {
+  border-radius: 20px;
+}
+
+.basiccontextmenu_contextMenuContents_TBSbv:first-child:not(.basiccontextmenu_hasSubMenu_1Mql2)
+  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(3),
+.basiccontextmenu_contextMenuContents_TBSbv:first-child.basiccontextmenu_hasSubMenu_1Mql2
+  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(4) {
   border-radius: 0px 0px 20px 20px;
 }
 
-.Play
-  ~ .basiccontextmenu_ContextMenuSeparator_zVMb1
-  + .basiccontextmenu_contextMenuItem_3PqLg,
-.Install
-  ~ .basiccontextmenu_ContextMenuSeparator_zVMb1
-  + .basiccontextmenu_contextMenuItem_3PqLg,
-.basiccontextmenu_ContextMenuSeparator_zVMb1
-  + .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(3):nth-child(7),
-.basiccontextmenu_ContextMenuSeparator_zVMb1
-  + .basiccontextmenu_contextMenuItem_3PqLg:last-child:nth-child(9),
-.basiccontextmenu_ContextMenuSeparator_zVMb1
-  + .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(3):nth-child(6),
-.basiccontextmenu_ContextMenuSeparator_zVMb1
-  + .basiccontextmenu_contextMenuItem_3PqLg:last-child:nth-child(8) {
+.BasicUI .appactionbutton_ButtonChild_2AzIX {
+  overflow: hidden;
+}
+.BasicUI .appactionbutton_ButtonChild_2AzIX.Focusable:focus:focus::after {
+  transform: scaleX(1.1);
+}
+
+/* Activate Product Dialog */
+.activateproductdialog_ProductActivationInfoContainer_1Amz7 {
   border-radius: 20px;
 }
