--- a/Round/round-outline.css
+++ b/Round/round-outline.css
@@ -1,5 +1,5 @@
 :root {
-  --round-radius-size: 20px;
+  --round-radius-size: none;
 }
 
 .BasicUI .appportrait_LibraryItemBox_WYgDg.Focusable:focus {
