--- a/Galactic/round-outline.css
+++ b/Galactic/round-outline.css
@@ -1,7 +1,11 @@
+:root {
+  --round-radius-size: 10px;
+}
+
 .BasicUI .appportrait_LibraryItemBox_WYgDg.Focusable:focus {
   outline: none;
   border: 2px solid rgba(255, 255, 255, 0.6);
-  border-radius: 22px;
+  border-radius: calc(var(--round-radius-size) + 2px);
   margin: -2px;
 }
 
@@ -9,12 +13,12 @@
   0% {
     border: 12px solid;
     margin: -12px;
-    border-radius: 30px;
+    border-radius: calc(var(--round-radius-size) + 10px);
   }
   100% {
     border: 2px solid;
     margin: -2px;
-    border-radius: 22px;
+    border-radius: calc(var(--round-radius-size) + 2px);
   }
 }
 @keyframes appportrait_fadeOutline_1FLuV {
@@ -34,7 +38,7 @@
 .focusring_FocusRing_1IZrQ {
   outline: none;
   border: 2px solid rgba(255, 255, 255, 0.6);
-  border-radius: 22px;
+  border-radius: calc(var(--round-radius-size) + 2px);
   margin: -2px;
   animation: focusring_growOutline_Z3LxS_alt 0.4s ease,
     focusring_fadeOutline_2hZu3_alt 0.4s ease,
@@ -45,12 +49,12 @@
   0% {
     border: 12px solid;
     margin: -12px;
-    border-radius: 30px;
+    border-radius: calc(var(--round-radius-size) + 10px);
   }
   100% {
     border: 2px solid;
     margin: -2px;
-    border-radius: 22px;
+    border-radius: calc(var(--round-radius-size) + 2px);
   }
 }
 @keyframes focusring_fadeOutline_2hZu3_alt {
