--- a/Round/round-outline.css
+++ b/Round/round-outline.css
@@ -80,6 +80,15 @@
   > .appactivityday_EventBody_NEMXh
   > .Panel
   > .focusring_FocusRingRoot_3PH_X
+  > .focusring_FocusRing_1IZrQ,
+.controllerconfiguratorchoosebinding_ChooseBindingContainer_1Kj9l
+  > .gamepadtabbedpage_GamepadTabbedPage_3IBLc
+  > .gamepadtabbedpage_TabContents_WDa0_
+  > .overlappingtransition_TransitionGroup_11Twu
+  > .overlappingtransition_ContentWrapper_1knAs
+  > .Panel
+  > .gamepadtabbedpage_TabContentsScroll_1X4dt
+  > .focusring_FocusRingRoot_3PH_X
   > .focusring_FocusRing_1IZrQ {
   border: none;
   outline: 2px solid rgba(255, 255, 255, 0.6);
