Actually fix Switch-Like Home compatibility

--- a/Galactic/round-outline.css
+++ b/Galactic/round-outline.css
@@ -18,6 +18,12 @@
 
 @keyframes appportrait_growOutline_3wk3d {
   0% {
+    /* This is necessary to fix themes like Switch-Like Home that rely on recent game sizes */
+    border: 2px solid;
+    margin: -2px;
+    border-radius: calc(var(--round-radius-size) + 2px);
+  }
+  0.1% {
     border: 12px solid;
     margin: -12px;
     border-radius: calc(var(--round-radius-size) + 10px);
