--- a/Obsidian/shared.css
+++ b/Obsidian/shared.css
@@ -18,7 +18,7 @@ HOME PAGE
 }
 /* Turn backgrounds black */
 .gamepadui_BasicHome_3LYP1.gamepadui_OpaqueBackground_b084m {
-  background: var(--obsidian-main-color) !important;
+  background: var(--obsidian-main-color);
 }
 .gamepadhome_TabbedContent_cE1Sa {
   background: var(--obsidian-main-color) !important;
@@ -29,7 +29,7 @@ LIBRARY
 */
 /* Turn backgrounds black */
 .gamepadlibrary_GamepadLibrary_ZBBhe {
-  background: var(--obsidian-main-color) !important;
+  background: var(--obsidian-main-color);
 }
 .steamdeckcompatfilter_CompatFilterDialog_21qvB {
   background: var(--obsidian-main-color) !important;
