--- a/Phantom/colors.css
+++ b/Phantom/colors.css
@@ -8,6 +8,9 @@
 .gamepadhome_RecentSection_39tNv {
   background: #900 !important;
 }
+.gamepadhomerecentgames_RecentGamesContainer_2_cRk {
+  backdrop-filter: saturate(2) brightness(0.8);
+}
 .gamepadhomerecentgames_RecentGamesInnerContainer_282X0
   .basicgamecarousel_SubMessage_1BtXg {
   color: #ccc;
