Fix recent games having a blue glow

--- a/Galactic/colors.css
+++ b/Galactic/colors.css
@@ -20,6 +20,9 @@ HOME PAGE
 .gamepadhome_TabbedContent_cE1Sa {
   background: var(--obsidian-main-color) !important;
 }
+.gamepadhomerecentgames_RecentGamesBackgroundFadeGradient_1ksIq {
+  background: none;
+}
 
 /*
 LIBRARY
