--- a/Phantom/colors.css
+++ b/Phantom/colors.css
@@ -20,6 +20,9 @@
   .basicgamecarousel_SubMessage_1BtXg.basicgamecarousel_SubMessage_1BtXg.basicgamecarousel_FriendsInGame_3z5U1 {
   color: #59bf40;
 }
+.gamepadhomerecentgames_RecentGamesBackgroundFadeGradient_1ksIq {
+  background: none;
+}
 
 /* Stylize library */
 .gamepadlibrary_GamepadLibrary_ZBBhe {
