Add lato bold font, lowercase & capitalize case transforms

--- a/Fonts/font-css/lato.css
+++ b/Fonts/font-css/lato.css
@@ -3,6 +3,11 @@
   src: url("/themes_custom/Fonts/fonts/Lato-Regular.ttf");
 }
 
+@font-face {
+  font-family: Lato;
+  src: url("/themes_custom/Fonts/fonts/Lato-Bold.ttf");
+}
+
 * {
   font-family: Lato !important;
 }
