--- a/Round/shared.css
+++ b/Round/shared.css
@@ -256,7 +256,7 @@ div.gamepadcontextmenu_contextMenuContents_sIgB- {
 .downloads_Button_3oavR.gamepaddialog_Button_1kn70.DialogButton[type="button"], /* This makes the button a circle */
 .downloads_SectionItem_1VNuY,
 .downloads_RemoveAllButton_1GdR5 {
-  border-radius: var(--round-radius-size);
+  border-radius: var(--round-radius-size) !important;
 }
 .downloads_Active_IbePL
   > .downloads_SectionList_OINnO
