Context menu radius improvements for "Round" theme (#56)
* fix sub-menu roundness

* fix friends context menu roundness

* fix protondb badge roundness

* fix context menu roundness

* fix clear all button

* reduce separator height

* Update theme.json

---------

Co-authored-by: EMERALD <hudson.samuels@gmail.com>

--- a/Round/shared.css
+++ b/Round/shared.css
@@ -256,7 +256,7 @@ div.gamepadcontextmenu_contextMenuContents_sIgB- {
 .downloads_Button_3oavR.gamepaddialog_Button_1kn70.DialogButton[type="button"], /* This makes the button a circle */
 .downloads_SectionItem_1VNuY,
 .downloads_RemoveAllButton_1GdR5 {
-  border-radius: var(--round-radius-size);
+  border-radius: var(--round-radius-size) !important;
 }
 .downloads_Active_IbePL
   > .downloads_SectionList_OINnO
@@ -328,30 +328,24 @@ div.gamepadcontextmenu_contextMenuContents_sIgB- {
 .gamepadcontextmenu_contextMenuContents_sIgB-:first-child
   .gamepadcontextmenu_ContextMenuSeparator_1KL6n {
   height: 0px;
-  padding-top: 2px;
-}
-
-.gamepadcontextmenu_contextMenuContents_sIgB-:first-child:not(
-    .gamepadcontextmenu_SubMenu_1_tPN
-  )
-  .gamepadcontextmenu_contextMenuItem_1sdvo:nth-last-child(1),
-.gamepadcontextmenu_contextMenuContents_sIgB-:first-child.gamepadcontextmenu_SubMenu_1_tPN
-  .gamepadcontextmenu_contextMenuItem_1sdvo:nth-last-child(2) {
-  border-radius: var(--round-radius-size);
-}
-
-.gamepadcontextmenu_contextMenuContents_sIgB-:first-child:not(
-    .gamepadcontextmenu_SubMenu_1_tPN
-  )
-  .gamepadcontextmenu_contextMenuItem_1sdvo:nth-last-child(3),
-.gamepadcontextmenu_contextMenuContents_sIgB-:first-child.gamepadcontextmenu_SubMenu_1_tPN
-  .gamepadcontextmenu_contextMenuItem_1sdvo:nth-last-child(4) {
-  border-radius: 0px 0px var(--round-radius-size) var(--round-radius-size);
 }
 
 .gamepadcontextmenu_contextMenuItem_1sdvo:first-child {
   border-top-left-radius: var(--round-radius-size);
   border-top-right-radius: var(--round-radius-size);
+}
+
+.gamepadcontextmenu_contextMenuContents_sIgB->:last-child {
+  border-bottom-left-radius: var(--round-radius-size);
+  border-bottom-right-radius: var(--round-radius-size);
+}
+
+.gamepadcontextmenu_contextMenuContents_sIgB- {
+  margin-left: 5px;
+}
+
+.contextMenuGameOptions {
+  border-radius: 0px !important;
 }
 
 .BasicUI .appactionbutton_ButtonChild_2AzIX {
@@ -368,5 +362,5 @@ div.gamepadcontextmenu_contextMenuContents_sIgB- {
 
 /* Add Support for ProtonDB Badge plugin by OMGDuke */
 .protondb-decky-indicator {
-  border-radius: var(--round-radius-size);
+  border-radius: var(--round-radius-size) !important;
 }
