--- a/Obsidian/shared.css
+++ b/Obsidian/shared.css
@@ -286,10 +286,10 @@ OTHER
 /* Loading Screen */
 .loadingthrobber_Container_3sa1N,
 .loadingthrobber_Container_3sa1N.loadingthrobber_PreloadThrobber_1-epa {
-  background: var(--obsidian-main-color);
+  background: var(--obsidian-main-color) !important;
 }
 .spinnyboi {
-  background: var(--obsidian-main-color);
+  background: var(--obsidian-main-color) !important;
 }
 /* Lock screen */
 .lockscreen_Container_3rFFU {
@@ -305,11 +305,11 @@ OTHER
 /* Other Steam Big Picture Mode Components */
 /* Settings Container */
 .settings-container {
-  background-color: var(--obsidian-main-color);
+  background-color: var(--obsidian-main-color) !important;
 }
 /* Scroll Panel */
 .scrollpanel_ScrollPanel_1CXdi,
 .scrollpanel_ScrollY_313lB {
-  background: var(--obsidian-main-color);
+  background: var(--obsidian-main-color) !important;
   background-color: var(--obsidian-main-color);
 }
