--- a/Round/shared.css
+++ b/Round/shared.css
@@ -321,6 +321,7 @@ div.gamepadcontextmenu_contextMenuContents_sIgB- {
 
 /* Achievements Page */
 
+.achievementsheader_StatsBlock__gDkI,
 .achievementspage_AchievementTabs_gxNvE .achievementslist_AchievementListItemBase_2Kmn7,
 .achievementspage_AchievementTabs_gxNvE .achievementslist_GlobalAchievementListItem_316Uo {
   border-radius: var(--round-radius-size);
